--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game-container">
         <header>
-            <img src="uno-logo.png" alt="UNO Logo" id="uno-logo">
+            <img src="download.png" alt="Lets Play UNO" id="uno-logo">
         </header>
 
         <h1>UNO Game - Player vs Computer</h1>
@@ -37,13 +37,15 @@
             <button id="draw-btn">Draw Card</button>
             <button id="play-card-btn">Play Card</button>
         </div>
-
+<div id="game-image">
+            <img src="uno1.png" alt="People playing UNO">
+        </div>
         <!-- Message -->
         <div id="game-message"></div>
     </div>
 
     <footer>
-        <p>© 2024 UNO Game</p>
+        <p>UNO game by Shantanu and Anushka</p>
     </footer>
 
     <script src="script.js"></script>
