--- a/index.html
+++ b/index.html
@@ -10,6 +10,14 @@
     <div id="game-container">
         <header>
             <img src="download.png" alt="Lets Play UNO" id="uno-logo">
+            <nav>
+            <ul class="navbar">
+                <li><a href="#">Home</a></li>
+                <li><a href="#">How to Play</a></li>
+                <li><a href="#">About</a></li>
+                <li><a href="#">Contact</a></li>
+            </ul>
+        </nav>
         </header>
 
         <h1>UNO Game - Player vs Computer</h1>
