Update4 index.html

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
     <div id="game-container">
         <header>
-            <img src="download.png" alt="Lets Play UNO" id="uno-logo">
+           <!-- <img src="download.png" alt="Lets Play UNO" id="uno-logo">-->
             
            <!--<nav>
             <ul class="navbar">
